Disclaimer and points counter.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bug Hunter</title>
     <script src="miner.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="field" id="field">
-
+    <div class="outer-container">
+        <div class="header-bar">
+            <p class="title">Смелый тестировщик</p>
+            <div class="stats-box" id="stats"></div>
+            <div class="reset-button"></div>
+        </div>
+        <div class="inner-container">
+            <div class="field" id="field"></div>
+            <div class="disclaimer-box">
+                <p>
+                Вы играете за тестировщика.
+                Игровое поле представляет собой программный продукт, а ячейки — участки кода.
+                Ваша задача найти и пометить все баги.
+                </p>
+                <p>
+                Выберите понравившийся участок кода и нажмите на него левой кнопкой мышки.
+                Если вы попадете в сбойный участок, то игра окончится и вы проиграете.
+                Если вы попадете в чистый участок, то он откроется. Цифра в открывшейся ячейке
+                показывает количество ошибок, находящихся в соседних клетках.
+                Правой кнопкой мышки можно пометить ячейку.
+                Если повторно нажать на открытый участок левой кнопкой мыши, это откроет все
+                соседние непомеченные участки.
+                Чистые участки кода открываются автоматически по возможности.
+                </p>
+                <p>
+                Чтобы начать заново просто обновите страницу.
+                </p>
+                <p>
+                Удачи.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
